<resources>
    <string name="app_name">Developers Journal</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">Blog Posts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- NAVIGATION -->
    <string name="nav_home">Home</string>
    <string name="categories">Categories</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_contact">Contact</string>

    <string name="rate_app">Rate this App</string>
    <string name="share_this_app">Share this App</string>
    <string name="feedback">Feedback</string>
    <!-- NAVIGATION -->

    <!-- WP JSON -->
    <string name="dj_endpoint">https://developersjournal.in/wp-json/wp/v2/</string>
    <string name="dj_posts">posts/</string>
    <string name="dj_categories">categories/</string>
    <!-- WP JSON -->

</resources>
