<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/nav_bookmarks"
            android:fontFamily="@font/roboto_slab" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/nav_contact" />
    </group>
    <group android:id="@+id/communicate_group" android:checkableBehavior="single">
        <item
            android:id="@+id/rate_app"
            android:icon="@drawable/ic_star_black_24px"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_this_app" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_message_black"
            android:title="@string/feedback" />
    </group>

</menu>
